--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -58,8 +58,13 @@
                                 <div class="row ">
                                     <div class=" col-xs-12 col-sm-12 col-md-6 "
                                          style="text-align: center;line-height: 180px">
-                                        <img ng-click="enlargePhoto(view.images)" style="height: auto;width:150px;cursor: pointer" ng-if="view.images.length > 0"
-                                             ng-src="{{view.images[0].image}}"/>
+                                        <!--<img ng-click="enlargePhoto(view.images)" style="height: auto;width:150px;cursor: pointer" ng-if="view.images.length > 0"-->
+                                             <!--ng-src="{{view.images[0].image}}"/>-->
+
+                                        <img class="dir-img" ng-src="{{view.images[0].image}}" ng-click="enlargePhoto(view.images)" style="border: 1px solid #ddd;
+                                        border-radius: 4px;padding: 5px;height:auto;width: 240px"
+                                             ng-show="indexValue == $index" ng-click='reverse1()'
+                                                />
                                         <img style="height: auto;width:230px"
                                              ng-if="view.images.length == 0 && view.gender == 'male'"
                                              ng-src="/assets/defaultImages/male_card.jpg"/>
