--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -62,7 +62,7 @@
                                              <!--ng-src="{{view.images[0].image}}"/>-->
 
                                         <img class="dir-img" ng-src="{{view.images[0].image}}" ng-click="enlargePhoto(view.images)" style="border: 1px solid #ddd;
-                                        border-radius: 4px;padding: 5px;height:auto;width: 240px"
+                                        border-radius: 4px;padding: 5px;height:220px;width: auto;max-width:240px"
                                              ng-show="indexValue == $index" ng-click='reverse1()'
                                                 />
                                         <img style="height: auto;width:230px"
