--- a/src/app/main/searchresults/searchresults.html
+++ b/src/app/main/searchresults/searchresults.html
@@ -104,13 +104,13 @@
                         </div>
                         <div class="portlet-body form">
                             <div class="row">
-                                <div class="col-md-3" style="text-align: center;">
+                                <div class="col-md-4" style="padding:15px;text-align: center;">
                                     <imageinfo images="item.images" gender="item.gender" reverse="viewAll(data)"></imageinfo>
 
                                 </div>
-                                <div class="col-md-9">
+                                <div class="col-md-8">
                                     <div class="row" >
-                                        <div class="col-md-12" style="border-bottom: 1px solid #eef1f5;">
+                                        <div class="col-md-12" style="border-bottom: 1px solid #eef1f5;margin-top: 10px">
                                             <table width="100%" style="margin-bottom: 10px;" class="match-table">
                                                 <tr>
                                                     <td width="30%" class="first-row">Age/Height</td>
