--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -61,7 +61,7 @@
                                         <!--<img ng-click="enlargePhoto(view.images)" style="height: auto;width:150px;cursor: pointer" ng-if="view.images.length > 0"-->
                                              <!--ng-src="{{view.images[0].image}}"/>-->
 
-                                        <img class="dir-img" ng-src="{{view.images[0].image}}" ng-click="enlargePhoto(view.images)" style="border: 1px solid #ddd;
+                                        <img class="dir-img" ng-src="{{view.images[0].image}}" ng-click="enlargePhoto(view.images)" ng-if="view.images.length > 0" style="border: 1px solid #ddd;
                                         border-radius: 4px;padding: 5px;height:220px;width: auto;max-width:240px"
                                              ng-show="indexValue == $index" ng-click='reverse1()'
                                                 />
@@ -1008,12 +1008,40 @@
                 <h4 class="modal-title" id="modal-title" style="color: #4cbcac;">
                     {{$ctrl.items.header}}</h4>
             </div>
-            <!--<div class="modal-body" id="modal-body">-->
-            <!--{{$ctrl.items.id}},{{$ctrl.items.field}}-->
-            <!--</div>-->
+
+            <div class="modal-body">
+                <div class="row" style="margin: 20px">
+                <div class="col-md-4">
+                <img  style="height: 90px;width: 90px;border-radius: 55% !important;"
+                      ng-src="{{$ctrl.items.img[0].image}}" ng-click="$ctrl.vieImg(img.image)"/>
+                </div>
+                    <div class="col-md-7">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <span class="bold">{{$ctrl.items.name}}</span> <span> ({{$ctrl.items.id}})</span>
+                                </div>
+                            <div class="col-md-12" style="margin-top: 25px">
+                                <button type="button" class=" uppercase btn red input-rounded" ng-click="$ctrl.upgrade()">
+                                    Upgrade Now
+                                </button>
+                                </div>
+
+                            </div>
+
+                    </div>
+                    </div>
             <div class="modal-footer">
+                <div class="row">
+                    <div class="col-md-8" style="color: grey">
+                        To know more about packages call now 9999999999
+                    </div>
+                    <div class="col-md-4" >
+                        <button class="btn btn-warning" type="button" ng-click="$ctrl.cancel()">OK</button>
+
+                    </div>
+
+                </div>
                 <!--<button class="btn btn-primary" type="button" ng-click="$ctrl.ok()">OK</button>-->
-                <button class="btn btn-warning" type="button" ng-click="$ctrl.cancel()">OK</button>
             </div>
         </script>
 
