--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -41,7 +41,8 @@
                                         <h4 class="heading"> About us</h4>
                                     </div>
                                     <div class="col-md-12">
-                                        <span class="description"> <a ui-sref="customerCare">24X7 Live help</a> | <a ui-sref="contactUs">Contact Us</a> | <a ui-sref="feedback">Feedback</a> |<a ui-sref="businessEnquires">FAQ</a> </span>
+                                        <span class="description" ng-if="!showLink"> <a ui-sref="customerCare">24X7 Live help</a> | <a ui-sref="contactUs">Contact Us</a> | <a ui-sref="feedback">Feedback</a> |<a ui-sref="businessEnquires">FAQ</a> </span>
+                                        <span class="description" ng-if="showLink"> <a>24X7 Live help</a> | <a >Contact Us</a> | <a >Feedback</a> |<a >FAQ</a> </span>
                                     </div>
                                 </div>
                             </div>
@@ -51,7 +52,7 @@
                                         <h4 class="heading"> Quick Link</h4>
                                     </div>
                                     <div class="col-md-12">
-                                        <span class="description"> Privacy Policy | <a ui-sref="terms">Terms of Use</a> | Safety Trips | Site Map </span>
+                                        <span class="description"><a ui-sref="terms"> Privacy Policy</a>| <a ui-sref="terms">Terms of Use</a> | Safety Trips | Site Map </span>
                                     </div>
                                 </div>
                             </div>
