--- a/src/app/toolbar/dashboard/dbToolbar.html
+++ b/src/app/toolbar/dashboard/dbToolbar.html
@@ -26,8 +26,8 @@
                         <li><a ui-sref="recomendation">DAILY MATCHES</a></li>
                         <li><a ui-sref="messages">MESSAGES</a></li>
                         <!--<li><a >HELP</a></li>-->
-                        <li class="top-menu dropdown dropdown-user ">
-                            <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"
+                        <li class="dropdown dropdown-user ">
+                            <a href="javascript:;"  class="dropdown-toggle a-drop-link" data-toggle="dropdown"
                                data-hover="dropdown" data-close-others="true">HELP</a>
                             <ul class="dropdown-menu ">
                                 <li>
