--- a/src/app/toolbar/message/messagetoolbar.html
+++ b/src/app/toolbar/message/messagetoolbar.html
@@ -24,7 +24,28 @@
 						<li><a ui-sref="search">SEARCH</a></li>
 						<li><a href="#about">DAILY MATCHES</a></li>
 						<li style="background-color: #00c29e"><a ui-sref="messages">MESSAGES</a></li>
-						<li><a ui-sref="#">HELP</a></li>
+						<li class="dropdown dropdown-user ">
+							<a href="javascript:;"  class="dropdown-toggle a-drop-link" data-toggle="dropdown"
+							   data-hover="dropdown" data-close-others="true">HELP</a>
+							<ul class="dropdown-menu ">
+								<li>
+									<a ui-sref="customerCare" style="height: 50px;line-height: 50px;width: 100%;text-align: left;font-size: 15px" >
+										<i class="icon-lock"></i>Customer Care </a>
+								</li>
+								<li>
+									<a ui-sref="contactUs" style="height: 50px;line-height: 50px;width: 100%;text-align: left;font-size: 15px" >
+										<i class="icon-lock"></i>Contact Us</a>
+								</li>
+								<li>
+									<a ui-sref="feedback" style="height: 50px;line-height: 50px;width: 100%;text-align: left;font-size: 15px" >
+										<i class="icon-lock"></i>Feedback</a>
+								</li>
+								<li>
+									<a ui-sref="businessEnquires" style="height: 50px;line-height: 50px;width: 100%;text-align: left;font-size: 15px" >
+										<i class="icon-key"></i>Business Enquires</a>
+								</li>
+							</ul>
+						</li>
 					</ul>
 				</div>
 
