--- a/src/app/main/search/regular/regular.html
+++ b/src/app/main/search/regular/regular.html
@@ -546,7 +546,7 @@
                                         </div>
                                     <multiselect ch-limit="10" show-search="false"
                                                  ng-model="multiValue.religion" options="religonList"
-                                                 id-prop="id_religion" display-prop="religion">
+                                                 id-prop="id_religion" display-prop="religion" labels="labels">
                                     </multiselect>
                                 </div>
 
@@ -563,7 +563,7 @@
                                     </div>
                                     <multiselect ch-limit="10" show-search="false"
                                                  ng-model="multiValue.mothertongue" options="motherTongueList"
-                                                 id-prop="id_mothertongue" display-prop="mothertongue">
+                                                 id-prop="id_mothertongue" display-prop="mothertongue" labels="labels">
                                     </multiselect>
                                 </div>
 
@@ -584,7 +584,7 @@
 
                                     <multiselect ch-limit="10" show-search="false"
                                                  ng-model="multiValue.occupation" options="occupation"
-                                                 id-prop="id_occupation" display-prop="occupation">
+                                                 id-prop="id_occupation" display-prop="occupation" labels="labels">
                                     </multiselect>
                                 </div>
 
@@ -602,7 +602,7 @@
 
                                     <multiselect style="height:30px" ng-click="changes()" ch-limit="10" show-search="false"
                                                  ng-model="multiValue.country" options="countryList"
-                                                 id-prop="id_country" display-prop="country_name">
+                                                 id-prop="id_country" display-prop="country_name" labels="labels">
                                     </multiselect>
 
 
@@ -624,7 +624,7 @@
                                     </div>
                                     <multiselect ch-limit="10" show-search="false"
                                                  ng-model="multiValue.education" options="educationList"
-                                                 id-prop="id_education" display-prop="education">
+                                                 id-prop="id_education" display-prop="education" labels="labels">
                                     </multiselect>
                                 </div>
 
@@ -644,7 +644,7 @@
 
                                     <multiselect ch-limit="10" show-search="false"
                                                  ng-model="multiValue.education_category" options="educationCategoryList"
-                                                 id-prop="id_education_category" display-prop="education_category">
+                                                 id-prop="id_education_category" display-prop="education_category" labels="labels">
                                     </multiselect>
                                 </div>
 
