--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -38,7 +38,7 @@
                             <div class="col-md-6">
                                 <div class="row">
                                     <div class="col-md-12">
-                                        <h4 class="heading"> About us</h4>
+                                        <h4 class="heading"> Need Help</h4>
                                     </div>
                                     <div class="col-md-12">
                                         <span class="description" ng-if="!showLink"> <a ui-sref="customerCare">24X7 Live help</a> | <a ui-sref="contactUs">Contact Us</a> | <a ui-sref="feedback">Feedback</a> |<a ui-sref="businessEnquires">FAQ</a> </span>
@@ -52,7 +52,7 @@
                                         <h4 class="heading"> Quick Link</h4>
                                     </div>
                                     <div class="col-md-12">
-                                        <span class="description"><a ui-sref="terms"> Privacy Policy</a>| <a ui-sref="terms">Terms of Use</a> | Safety Trips | Site Map </span>
+                                        <span class="description"><a ui-sref="terms"> Privacy Policy</a>| <a ui-sref="terms">Terms of Use</a> | Advertise with us </span>
                                     </div>
                                 </div>
                             </div>
@@ -71,14 +71,14 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="row">
-                                    <div class="col-md-12">
-                                        <span class="foot-text">
-                                            Contact Us &nbsp;
-                                            <a href="#" class=" socicon-btn socicon-btn-circle socicon-sm socicon-solid bg-blue bg-hover-grey-salsa font-white bg-hover-white socicon-facebook tooltips" data-original-title="Facebook"></a>&nbsp;
-                                            <a href="#" class="socicon-btn socicon-btn-circle socicon-sm socicon-solid bg-green bg-hover-grey-salsa font-white bg-hover-white socicon-twitter tooltips" data-original-title="Twitter"></a>&nbsp;
-                                            <a href="#" class="socicon-btn socicon-btn-circle socicon-sm socicon-solid bg-red bg-hover-grey-salsa font-white bg-hover-white socicon-google tooltips" data-original-title="Google"></a>
-                                        </span>
-                                    </div>
+                                    <!--<div class="col-md-12">-->
+                                        <!--<span class="foot-text">-->
+                                            <!--Contact Us &nbsp;-->
+                                            <!--<a href="#" class=" socicon-btn socicon-btn-circle socicon-sm socicon-solid bg-blue bg-hover-grey-salsa font-white bg-hover-white socicon-facebook tooltips" data-original-title="Facebook"></a>&nbsp;-->
+                                            <!--<a href="#" class="socicon-btn socicon-btn-circle socicon-sm socicon-solid bg-green bg-hover-grey-salsa font-white bg-hover-white socicon-twitter tooltips" data-original-title="Twitter"></a>&nbsp;-->
+                                            <!--<a href="#" class="socicon-btn socicon-btn-circle socicon-sm socicon-solid bg-red bg-hover-grey-salsa font-white bg-hover-white socicon-google tooltips" data-original-title="Google"></a>-->
+                                        <!--</span>-->
+                                    <!--</div>-->
                                 </div>
                             </div>
                         </div>
